<resources>
    <string name="app_name">P-Book</string>
    <string name="button">OK</string>
    <string name="title_activity_template">Template</string>
    <string name="title_activity_libraries">LibrariesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_title">Android Studio</string>
    <string name="navigation_drawer_discription">contentDescription</string>
    <string name="action_addLibrary">Buch hinzufügen</string>
    <string name="tutorial_link"><u>Tutorial</u></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General properties -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example properties for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example properties for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="downloadWithoutWifi_summary">Buchcover auch ohne WLAN-Verbindung herunterladen</string>
    <string name="title_activity_add_book">Buch hinzufügen</string>
    <string name="addBookButton">Suchen</string>
    <string name="isbn">ISBN</string>
    <string name="showHTML_title">HTML in der Buchbeschreibung anzeigen</string>
    <string name="showHTML_summary">HTML in der Buchbeschreibung anzeigen</string>
    <string name="downloadWithoutWifi_title">Mobiledatennutzung</string>
    <string name="advertisementLinks_title">Affiliate Links</string>
    <string name="advertisementLinks_summary">Entwickler durch anzeige von Affiliate Links unterstützen</string>
    <string name="display">Darstellung</string>
    <string name="network">Netzwerk</string>
    <string name="preferences_title">Einstellungen</string>
    <string name="bookServiceHost_title">Buch Server</string>
    <string name="bookServiceHost_summary">Hostadresse des Buchservers (Standard: "kam-pixels.de:55555/isbn/")</string>

    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>
